# AugmentedRealityChessCPP

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  connection.cc  game  server.cc  server.h
helpers/: Shader.h  chesspiece.cc  chesspiece.h  chesstype.cc  chesstype.h  objloader.cpp
shaders/: blurShader.fs  chessShader.fs  combineShader.fs  cubeShader.fs  gridShader.fs  gridShader.vs  textureShader.vs
test/: connect  connect.cc  connect.d  host.cc  host.d  host.h  peer.cc  peer.d  peer.h
